--- a/general_frontend/src/index.css
+++ b/general_frontend/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.element {
+  border: 1px solid #000;
+  padding: 10px;
+  margin: 10px;
+}
