--- a/general_frontend/src/app/globals.css
+++ b/general_frontend/src/app/globals.css
@@ -32,3 +32,8 @@ body {
 .react-resizable-handle.react-resizable-handle-se {
   z-index: 50;
 }
+
+.react-grid-item.react-grid-placeholder {
+  background-color: gray;
+  border-radius: 0.5rem;
+}
