--- a/general_frontend/src/app/globals.css
+++ b/general_frontend/src/app/globals.css
@@ -63,6 +63,10 @@ body {
   width: 100%;
 }
 
+.react-aria-DateRangePicker, .react-aria-DatePicker {
+  line-height: initial;
+}
+
 .skeleton:empty {
   animation: skeleton-loading 1s linear infinite alternate;
 }
