--- a/general_frontend/src/app/globals.css
+++ b/general_frontend/src/app/globals.css
@@ -80,3 +80,14 @@ body {
     background-color: rgb(240, 243, 245)
   }
 }
+
+.unselectable *{
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  cursor: not-allowed;
+}
