--- a/general_frontend/src/app/globals.css
+++ b/general_frontend/src/app/globals.css
@@ -21,15 +21,7 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-.react-resizable-handle.react-resizable-handle-se {
-  z-index: 50;
-}
-
-.react-grid-item.react-grid-placeholder {
-  background-color: gray;
-  border-radius: 0.5rem;
-}
-
+/* skeleton */
 .skeleton:empty {
   animation: skeleton-loading 1s linear infinite alternate;
 }
@@ -43,6 +35,7 @@ body {
   }
 }
 
+/* helpers */
 .unselectable *{
   -webkit-touch-callout: none;
   -webkit-user-select: none;
